<?xml version="1.0"?>
<package format="2">
  <name>region_monitor</name>
  <version>1.0.0</version>
  <description>Monitor a cubic region of space and look for points to appear inside it</description>

  <maintainer email="allevato@utexas.edu">Adam Allevato</maintainer>
  <author email="allevato@utexas.edu">Adam Allevato</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>interactive_markers</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
